# loom

./: README.md  pyproject.toml  setup.cfg
src/loom/: __init__.py  loom.py
src/loom.egg-info/: PKG-INFO  SOURCES.txt
