[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
version = "1.0.5"
authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
description = "Map-Reduce in threads"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
              ]
dependencies = [ ]

[project.urls]
"Homepage" = "https://github.com/drisen/loom"
"Bug Tracker" = "https://github.com/drisen/loom/issues"
