[metadata]
name = loom
version = 1.0.2
author = "Dennis Risen"
author_email = "dar5@case.edu"
description = "Map-Reduce in threads"
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/drisen/loom
project_urls =
    Bug Tracker = https://github.com/drisen/loom/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src